<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2004-2025 the original author or authors.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.mybatis</groupId>
    <artifactId>mybatis-parent</artifactId>
    <version>51</version>
    <relativePath />
  </parent>

  <groupId>org.mybatis</groupId>
  <artifactId>mybatis2</artifactId>
  <version>2.7.4-SNAPSHOT</version>

  <name>mybatis2</name>
  <description>The mybatis data mapper framework makes it easier to use a relational database with object-oriented
    applications. mybatis couples objects with stored procedures or SQL statements using a XML descriptor or
    annotations. Simplicity is the biggest advantage of the mybatis data mapper over object relational mapping
    tools.</description>
  <url>https://www.mybatis.org/ibatis-2/</url>

  <inceptionYear>2004</inceptionYear>

  <scm>
    <connection>scm:git:ssh://git@github.com/mybatis/mybatis-2.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/mybatis/mybatis-2.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/mybatis/mybatis-2/</url>
  </scm>
  <issueManagement>
    <system>GitHub Issue Management</system>
    <url>https://github.com/mybatis/mybatis-2/issues</url>
  </issueManagement>
  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/mybatis/mybatis-2/actions</url>
  </ciManagement>
  <distributionManagement>
    <site>
      <id>gh-pages-scm</id>
      <name>Mybatis GitHub Pages</name>
      <url>scm:git:ssh://git@github.com/mybatis/mybatis-2.git</url>
    </site>
  </distributionManagement>

  <properties>
    <!-- Maven compiler options -->
    <java.version>11</java.version>
    <java.release.version>11</java.release.version>

    <clirr.comparisonVersion>2.4.4</clirr.comparisonVersion>
    <derby.version>10.17.1.0</derby.version>
    <slf4j.version>2.0.17</slf4j.version>

    <module.name>org.mybatis.mybatis2</module.name>
    <osgi.export>com.ibatis.*;version=${project.version};-noimport:=true</osgi.export>
    <osgi.import>*;resolution:=optional</osgi.import>
    <osgi.dynamicImport>*</osgi.dynamicImport>

    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1766957908</project.build.outputTimestamp>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.reload4j</groupId>
      <artifactId>reload4j</artifactId>
      <version>1.2.26</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.3.5</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>9.9.1</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>cglib</groupId>
      <artifactId>cglib</artifactId>
      <version>3.3.0</version>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-dbcp2</artifactId>
      <version>2.14.0</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>jakarta.transaction</groupId>
      <artifactId>jakarta.transaction-api</artifactId>
      <version>2.0.1</version>
      <scope>provided</scope>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>6.0.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.7.4</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derby</artifactId>
      <version>${derby.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derbytools</artifactId>
      <version>${derby.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptors>
            <descriptor>bundle.xml</descriptor>
          </descriptors>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <systemPropertyVariables>
            <property>
              <name>derby.stream.error.file</name>
              <value>${project.build.directory}/derby.log</value>
            </property>
            <property>
              <name>derby.system.home</name>
              <value>${project.build.directory}/ibderby</value>
            </property>
          </systemPropertyVariables>
        </configuration>
      </plugin>
    </plugins>

  </build>

  <profiles>
    <profile>
      <id>jdk17on</id>
      <activation>
        <jdk>[17,19]</jdk>
      </activation>
      <properties>
        <derby.version>10.16.1.1</derby.version>
      </properties>
    </profile>
  </profiles>

</project>
